--- a/tecolotl-web/src/main/webapp/administracion/detalle-escuela.xhtml
+++ b/tecolotl-web/src/main/webapp/administracion/detalle-escuela.xhtml
@@ -523,6 +523,7 @@
                             </h:outputFormat>
                         </p>
                     </div>
+                    <h:inputHidden id="input-fecha-adquisicion" value="#{licenciasControlador.licenciaModelo.adquisicion}"/>
                     <div class="uk-modal-body">
                         <h:outputLabel styleClass="uk-form-label uk-text-capitalize" for="input-fecha" value="#{administracion['schooldetail.lisense.datestart']}"/>
                         <div class="uk-form-controls">
