--- a/tecolotl-web/src/main/webapp/administracion/dashboard.xhtml
+++ b/tecolotl-web/src/main/webapp/administracion/dashboard.xhtml
@@ -87,14 +87,16 @@
                             <div class="uk-width-1-3">
                                 <h:form styleClass="uk-search largo-buscar" id="formulario-filtrado-escuela">
                                     <div class="uk-inline">
-                                        <h:commandLink styleClass="uk-form-icon"
+                                        <h:commandLink styleClass="uk-form-icon uk-form-icon-flip uk-light uk-background-primary"
                                                        id="comando-busqueda"
                                                        pt:uk-icon="icon: search"
+                                                       pt:uk-tooltip="title: Dar click en la lupa para buscar; delay:2000; pos:right"
                                                        rendered="#{empty escuelaDashboardControlador.busqueda}">
                                             <f:ajax render="formulario-tabla-escuela @form" execute="filtrado" listener="#{escuelaDashboardControlador.actualizaDataModel}"/>
                                         </h:commandLink>
-                                        <h:commandLink styleClass="uk-form-icon uk-light"
+                                        <h:commandLink styleClass="uk-form-icon uk-light uk-form-icon-flip uk-background-secondary"
                                                        pt:uk-icon="icon: close"
+                                                       pt:uk-tooltip="title: Dar click para borrar busqueda; delay:2000; pos:right"
                                                        action="#{escuelaDashboardControlador.actualizaDataModel}"
                                                        rendered="#{not empty escuelaDashboardControlador.busqueda}">
                                             <f:setPropertyActionListener value="#{null}" target="#{escuelaDashboardControlador.busqueda}"/>
@@ -107,7 +109,7 @@
                                                      value="#{escuelaDashboardControlador.busqueda}"
                                                      pt:uk-tooltip="title: #{empty escuelaDashboardControlador.collectionDataModel.wrappedData
                                                         ? administracion['dashboard.search.tooltip.diseble']
-                                                        : administracion['dashboard.search.tooltip.enable']}; delay:2000; pos:right;">
+                                                        : administracion['dashboard.search.tooltip.enable']}; delay:2000; pos:left">
                                         </h:inputText>
                                     </div>
                                 </h:form>
@@ -227,7 +229,7 @@
                                                     <h:commandLink styleClass="uk-text-primary" pt:uk-toggle="target: #modal-bloqueo" rendered="#{escuela.activo}">
                                                         <h:outputText pt:uk-icon="icon: ban" styleClass="uk-margin-small-right uk-icon" />
                                                         <span class="uk-text-middle"><h:outputText value="#{boton['block']}" styleClass="primera-mayuscula uk-display-inline-block"/></span>
-                                                        <f:setPropertyActionListener value="#{escuela.claveCentroTrabajo}" target="#{escuelaDashboardControlador.escuelaBaseModelo.claveCentroTrabajo}"/>
+                                                        <f:setPropertyActionListener value="#{escuela}" target="#{escuelaDashboardControlador.escuelaBaseModelo}"/>
                                                         <f:ajax render="formulario-bloqueo" onevent="function funcion(data) { abreModal('modal-bloqueo') }"/>
                                                     </h:commandLink>
                                                     <h:commandLink styleClass="uk-text-primary" rendered="#{not escuela.activo}" action="#{escuelaDashboardControlador.activa}">
