--- a/tecolotl-web/src/main/webapp/administracion/dashboard.xhtml
+++ b/tecolotl-web/src/main/webapp/administracion/dashboard.xhtml
@@ -52,6 +52,7 @@
                         <f:convertNumber type="percent"/>
                     </h:outputText>  #{administracion['dashboard.header.student.used']}.
                 </div>
+
             </div>
             <div class="uk-text-center">
                 <span class="uk-text-small"><h:outputText pt:uk-icon="users" styleClass="uk-text-primary uk-margin-small-right uk-text-capitalize"/><span class="uk-text-capitalize">#{administracion['dashboard.header.teacher']}</span></span>
@@ -292,6 +293,7 @@
                     </div>
                     <div class="uk-modal-body">
                         <div uk-grid="">
+
                             <div class="uk-width-1-1@s uk-width-1-6@m">
                                 <h:outputLabel styleClass="uk-form-label uk-text-uppercase" for="input-escuela-cct" value="#{administracion['dashboard.modal.cct']}"/>
                                 <div class="uk-form-controls">
@@ -433,9 +435,7 @@
                                                  label="#{administracion['dashboard.modal.town']}"
                                                  disabled="true"/>
                                 </div>
-                                <div class="uk-margin">
-                                    <input class="uk-input picker" type="text" />
-                                </div>
+
                             </div>
                         </div>
                     </div>
@@ -512,6 +512,7 @@
                         <h:outputFormat styleClass="primera-mayuscula uk-display-block" value="#{administracion['dashboard.modalremove.message']}">
                             <f:param value="#{escuelaDashboardControlador.escuelaBaseModelo.nombre}"/>
                         </h:outputFormat>
+
                     </div>
                     <div class="uk-modal-footer uk-flex uk-flex-right">
                         <button class="uk-button uk-button-default uk-modal-close uk-margin-small-right" onclick="limpiaEntrada('modal-escuela')">#{boton['cancel']}</button>
@@ -521,84 +522,88 @@
                                     onevent="function funcion(data) { limpiaSelect(data) }"
                                     listener="#{escuelaDashboardControlador.elimina}"/>
                         </h:commandButton>
+                        <div class="uk-margin">
+                            <input class="uk-input picker" type="text" />
+                        </div>
                     </div>
                 </h:form>
             </div>
         </h:panelGroup>
+
+
+<!--        <script type="text/javascript">-->
+<!--            var modalEscuela = document.querySelector('#modal-escuela');-->
+<!--            var modalMotivoBloqueo = document.querySelector('#modal-bloqueo');-->
+<!--            var modalEliminar = document.querySelector('#modal-eliminar');-->
+
+<!--            document.addEventListener('DOMContentLoaded', function() {-->
+<!--                limpiaSelect();-->
+<!--            });-->
+
+<!--            function limpiaSelect(data) {-->
+<!--                if (typeof data === 'undefined') {-->
+<!--                    document.querySelectorAll('.uk-select').forEach(function (value) {-->
+<!--                        value.removeAttribute('size');-->
+<!--                    })-->
+<!--                } else {-->
+<!--                    if (data.status === 'success') {-->
+<!--                        document.querySelectorAll('.uk-select').forEach(-->
+<!--                            function (value) { value.removeAttribute('size'); }-->
+<!--                        )-->
+<!--                    }-->
+<!--                }-->
+<!--            }-->
+
+<!--            function limpiaEntrada(modal) {-->
+<!--                switch (modal) {-->
+<!--                    case 'modal-escuela':-->
+<!--                        modalEscuela.querySelectorAll('.uk-input').forEach(function (entrada) {-->
+<!--                            entrada.value = '';-->
+<!--                        });-->
+<!--                        break;-->
+<!--                    default:-->
+<!--                        console.error('Opcion aun no programada:'.concat(modal));-->
+<!--                }-->
+<!--            }-->
+
+<!--            function cierraModal(data, modal) {-->
+<!--                if (data.status === "success") {-->
+<!--                    switch (modal) {-->
+<!--                        case 'modal-escuela':-->
+<!--                            if (modalEscuela.querySelector('.uk-text-danger') === null) {-->
+<!--                                UIkit.modal(modalEscuela).hide();-->
+<!--                                limpiaEntrada(modal);-->
+<!--                            }-->
+<!--                            break;-->
+<!--                        case 'modal-bloqueo':-->
+<!--                            if (modalMotivoBloqueo.querySelector('.uk-text-danger') === null) {-->
+<!--                                UIkit.modal(modalMotivoBloqueo).hide();-->
+<!--                            }-->
+<!--                            break;-->
+<!--                        default:-->
+<!--                            console.error('Opcion aun no programada:'.concat(modal));-->
+<!--                    }-->
+<!--                }-->
+<!--            }-->
+
+<!--            function abreModal(modal) {-->
+<!--                switch (modal) {-->
+<!--                    case 'modal-escuela':-->
+<!--                        modalEscuela.querySelector('.uk-modal-header').click();-->
+<!--                        break;-->
+<!--                    case 'modal-bloqueo':-->
+<!--                        var objecto = modalMotivoBloqueo.querySelector('.uk-form-label');-->
+<!--                        objecto.click();-->
+<!--                        break;-->
+<!--                    case 'modal-eliminar':-->
+<!--                        modalEliminar.querySelector('.uk-text-center').click();-->
+<!--                        break;-->
+<!--                    default:-->
+<!--                        console.error('Opcion aun no programada:'.concat(modal));-->
+<!--                }-->
+<!--            }-->
+<!--        </script>-->
         <h:outputScript library="js" name="date-picker.js"/>
-
-        <script type="text/javascript">
-            var modalEscuela = document.querySelector('#modal-escuela');
-            var modalMotivoBloqueo = document.querySelector('#modal-bloqueo');
-            var modalEliminar = document.querySelector('#modal-eliminar');
-
-            document.addEventListener('DOMContentLoaded', function() {
-                limpiaSelect();
-            });
-
-            function limpiaSelect(data) {
-                if (typeof data === 'undefined') {
-                    document.querySelectorAll('.uk-select').forEach(function (value) {
-                        value.removeAttribute('size');
-                    })
-                } else {
-                    if (data.status === 'success') {
-                        document.querySelectorAll('.uk-select').forEach(
-                            function (value) { value.removeAttribute('size'); }
-                        )
-                    }
-                }
-            }
-
-            function limpiaEntrada(modal) {
-                switch (modal) {
-                    case 'modal-escuela':
-                        modalEscuela.querySelectorAll('.uk-input').forEach(function (entrada) {
-                            entrada.value = '';
-                        });
-                        break;
-                    default:
-                        console.error('Opcion aun no programada:'.concat(modal));
-                }
-            }
-
-            function cierraModal(data, modal) {
-                if (data.status === "success") {
-                    switch (modal) {
-                        case 'modal-escuela':
-                            if (modalEscuela.querySelector('.uk-text-danger') === null) {
-                                UIkit.modal(modalEscuela).hide();
-                                limpiaEntrada(modal);
-                            }
-                            break;
-                        case 'modal-bloqueo':
-                            if (modalMotivoBloqueo.querySelector('.uk-text-danger') === null) {
-                                UIkit.modal(modalMotivoBloqueo).hide();
-                            }
-                            break;
-                        default:
-                            console.error('Opcion aun no programada:'.concat(modal));
-                    }
-                }
-            }
-
-            function abreModal(modal) {
-                switch (modal) {
-                    case 'modal-escuela':
-                        modalEscuela.querySelector('.uk-modal-header').click();
-                        break;
-                    case 'modal-bloqueo':
-                        var objecto = modalMotivoBloqueo.querySelector('.uk-form-label');
-                        objecto.click();
-                        break;
-                    case 'modal-eliminar':
-                        modalEliminar.querySelector('.uk-text-center').click();
-                        break;
-                    default:
-                        console.error('Opcion aun no programada:'.concat(modal));
-                }
-            }
-        </script>
     </ui:define>
 </ui:composition>
 </html>
